--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -6,7 +6,7 @@
     <!-- favicon -->
     <link
       rel="shortcut icon"
-      href="./assets/favicon-32x32.png"
+      href="../assets/favicon-32x32.png"
       type="image/x-icon"
     />
     <!-- font -->
