Update home page files

--- a/index.html
+++ b/index.html
@@ -14,18 +14,29 @@
     <title>Frontend Mentor Projects</title>
   </head>
   <body>
-    <main>
+    <header>
       <h1>Newbie Projects</h1>
-      <section>
-        <a
-          href="./qr-code-component/index.html"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img src="./assets/qr_code.png" alt="" />
+    </header>
+
+    <main>
+      <div>
+        <a href="./qr-code-component/index.html" target="_blank">
+          <img src="./assets/qr_code.png" alt="qr code" />
           <h2>QR code component</h2>
         </a>
-      </section>
+      </div>
+
+      <div>
+        <a href="./four-card-feature-section/index.html" target="_blank">
+          <img
+            src="./four-card-feature-section/assets/desktop-view.png"
+            alt="grid four cards"
+          />
+          <h2>Four card feature section</h2>
+        </a>
+      </div>
     </main>
+
+    <footer><a href=""></a></footer>
   </body>
 </html>
